--- a/package.json
+++ b/package.json
@@ -21,18 +21,27 @@
     "test": "echo \"Error: no test specified\" && exit 0",
     "watch": "concurrently 'yarn run watch-esm' 'yarn run watch-commonjs'",
     "watch-esm": "esbuild src/index.ts --platform=node --packages=external --bundle --format=esm --outfile=dist/index.mjs --watch",
-    "watch-commonjs": "esbuild src/index.ts --platform=node --packages=external --bundle --format=cjs --outfile=dist/index.cjs --watch"
+    "watch-commonjs": "esbuild src/index.ts --platform=node --packages=external --bundle --format=cjs --outfile=dist/index.cjs --watch",
+    "format": "NODE_OPTIONS=\"--experimental-strip-types\" prettier . --write",
+    "lint": "eslint src/",
+    "prepare": "husky"
   },
   "dependencies": {
     "jsdom": "^26.0.0"
   },
   "devDependencies": {
+    "@eslint/js": "^9.23.0",
     "@types/jsdom": "^21.1.7",
     "@types/node": "^22.13.10",
     "concurrently": "^8.2.2",
     "esbuild": "^0.24.2",
+    "eslint": "^9.23.0",
+    "husky": "^9.1.7",
+    "lint-staged": "^15.5.0",
+    "prettier": "^3.5.3",
     "rimraf": "^5.0.7",
-    "typescript": "^5.7.3"
+    "typescript": "^5.8.2",
+    "typescript-eslint": "^8.29.0"
   },
   "keywords": [
     "esbuild",
@@ -48,5 +57,11 @@
   "bugs": {
     "url": "https://github.com/doug-wade/esbuild-plugin-single-file/issues"
   },
-  "packageManager": "yarn@4.7.0"
+  "packageManager": "yarn@4.7.0",
+  "lint-staged": {
+    "**/*": [
+      "yarn lint",
+      "yarn format"
+    ]
+  }
 }
